# Pydantic_Practice

./: .gitignore  README.md  pyproject.toml
src/pydantic_practice/: Field_Validator.py  compute_Field.py  intro.py  model_validator.py  nested_model.py  serilization.py
